[package]
name = "agcwd"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Image contrast enhancement library based on the AGCWD algorithm"
homepage = "https://github.com/sile/agcwd"
repository = "https://github.com/sile/agcwd"
readme = "README.md"
categories = ["multimedia::images"]

[badges]
coveralls = {repository = "sile/agcwd"}

[dev-dependencies]
anyhow = "1"
png = "0.17"
structopt = "0.3"
